bugfixed: Tree will show scrollbar. (#169)
closed: #168

--- a/styles/tree-picker.less
+++ b/styles/tree-picker.less
@@ -80,10 +80,9 @@
     height: 36px;
     font-size: @picker-tree-node-font-size;
     line-height: @picker-tree-node-line-height;
-    transform: rotate(-90deg);
+    transform: rotate(-90deg) translateX(-2px);
     transform-origin: 3.5px 16px;
     margin-left: -2px;
-    margin-top: 2px;
     font-family: @font-family-icon;
     font-style: normal;
 
